# hello_rust_rayon

./: Cargo.toml  LICENSE  README.md
src/: main.rs
