[package]
name = "hello_rust_rayon"
version = "0.1.0"
authors = ["Don Bright <hmbright@fastmail.com"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com"
repository = "https://github.com/donbright/hello_rust_rayon"
description = """
Basic example of parallell processing under the rayon system
"""

[dependencies]
rayon = "1.0.3"

